Fix how-it-works exit button to work on mobile

--- a/app/assets/stylesheets/styles/components/pages/_how_it_works.css.scss
+++ b/app/assets/stylesheets/styles/components/pages/_how_it_works.css.scss
@@ -16,6 +16,7 @@
   position: absolute;
   right: 2rem;
   top: 2rem;
+  z-index: 3;
 
     &:hover {
       color: #333333;
